untracked unecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# useless files
+quiz1/
+quiz2/
+practical assignments/practical assignment 1/ AMIN'S ASSIGNMENT 1.c
+practical assignments/practical assignment 1/ AMIN'S ASSIGNMENT 1
+practical assignments/practical assignment 1/ AMIN'S ASSIGNMENT 1.o
+practical assignments/practical assignment 2/amin/
+practical assignments/practical assignment 2/farnaz/
+practical assignments/practical assignment 2/saeed/
+practical assignments/practical assignment 3/amin/
+practical assignments/practical assignment 3/farnaz/
+
+
+
 # Prerequisites
 *.d
 
